# cmake_template_conan

./: CMakeLists.txt  CMakePresets.json  Dependencies.cmake  NewProject.bat  NewProject.ps1  ProjectOptions.cmake  README.md  README_building.md  README_docker.md  RenameProject.ps1  gcovr.cfg
.github/: constants.env
.github/workflows/: ci.yml  codeql-analysis.yml  template-janitor.yml
app/: CMakeLists.txt  main.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Emscripten.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  VCEnvironment.cmake
cmake/configured/: CMakeLists.txt
configured_files/: config.hpp.in
docs/: Doxyfile  building.md  dependencies.md  docker.md
fuzz/: CMakeLists.txt
scripts/: NewProject.ps1  RenameProject.ps1  build.bat  generate-project-files.bat  generate-visual-studio-project.bat
src/: CMakeLists.txt
test/: CMakeLists.txt  test_main.cpp
tests/: CMakeLists.txt
